2011-02-16 Matthias Scholz <ms@jammerhund.de>
	* updated german translation for LayerPropertiesPlugIn

2011-02-09 mmichaud <michael.michaud@free.fr> for mrashad
    * org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn
        add layer extent to the information panel

2011-02-12 Matthias Scholz <ms@jammerhund.de>
	* org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn
		Bugfix in WriteLayer(), the charset was not considered while saving an
		existing layer into a shapefile. So it was possible that you get wrong
		strings in the dbf file.
	* org.openjump.core.ui.plugin.tools.AdvancedMeasureTool
		Bugfix in actionPerformed() to viewing the right OptionTab
	* com.vividsolutions.jump.workbench.JUMPConfiguration
		switched from the old MeasureTool to the new AdvancedMeasureTool

2011-02-09 mmichaud <michael.michaud@free.fr> for mrashad
    * org.openjump.core.rasterimage.AddRasterImageLayerWizard
      Now load an image without worldfile. Default coordinates are used to
      display the image and the corresponding worldfile is created.

2011-01-25 mmichaud <michael.michaud@free.fr>
    * Bugfix in ColorThemingStyle : when a numeric attribute contains
      only nulls, or less values than breaks, classification methods fail and
      break following classification processes
        * com.vividsolutions.jump.workbench.ui.renderer.style.attributeclassifications
              .JenksBreaksColorThemingState
              .MaximalBreaksColorThemingState
              .MeanSTDvColorThemingState
              .QuantileColorThemingState
              .RangeColorThemingState
        * org.openjump.core.attributeoperations.Classifier1D

2011-01-22 Matthias Scholz <ms@jammerhund.de>
	* small GUI fix in FontChooser, now the example text is better visible
	* AdvancedMeasureTool enhancement:
		If the user starts a measurement with a single click, all the old
		measurements will be deleted. But if the user starts the measurement